[metadata]
name = susieia
version = 0.0.1
author = Carlos R. Albors
author_email = calbors@broadinstitute.org
description = An imputation-aware extension of the fine-mapping algorithm "SuSiE"
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/finucanelab/susie-ia
project_urls =
    Bug Tracker = https://github.com/finucanelab/susie-ia/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src